[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pvipy"
dynamic = ["version"]
authors = [
  { name="Christoph Hilchenbach" },
]
description = "Python connector for B&R Pvi (process visualization interface)"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]

[project.scripts]
Snmpscan = "pvi.Snmpscan:main_cli"
Anslscan = "pvi.Anslscan:main_cli"
Inascan = "pvi.Inascan:main_cli"

[tool.hatch.build.targets.wheel]
only-include = ["pvi"]

[tool.hatch.version]
path = "pvi/__about__.py"

[project.urls]
"Homepage" = "https://hilch.github.io/Pvi.py/"
"Bug Tracker" = "https://github.com/hilch/Pvi.py/issues"
